--- a/index.html
+++ b/index.html
@@ -2238,7 +2238,7 @@
                     <div class="biography-intro">
                         <h3>DA PERIFERIA PARA O EMPREENDEDORISMO</h3>
                         <p class="lead-text">
-                            Neguim da Pimenta é um empresário que batalhou e construiu sua trajetória com <strong>trabalho, visão</strong> e forte ligação com a comunidade onde nasceu e cresceu.
+                            Neguim da Pimenta é um empresário que batalhou e construiu sua trajetória com <strong>trabalho, visão</strong> e forte ligação com Ceilândia.
                         </p>
                     </div>
                     
@@ -2274,8 +2274,20 @@
                                 </div>
                                 <div class="value-item">
                                     <div class="value-icon">
+                                        <i class="fas fa-hard-hat"></i>
+                                    </div>
+
+
+                                    <h5>Trabalho</h5>
+                                    <p>Coragem e perseverança.</p>
+                                </div>
+                                <div class="value-item">
+                                    <div class="value-icon">
                                         <i class="fas fa-fist-raised"></i>
                                     </div>
+
+
+
                                     <h5>Resistência</h5>
                                     <p>Força para superar desafios</p>
                                 </div>
