--- a/index.html
+++ b/index.html
@@ -2267,19 +2267,18 @@
                                 </div>
                                 <div class="value-item">
                                     <div class="value-icon">
-                                        <i class="fas fa-users"></i>
+                                        <i class="fas fa-hard-hat"></i>
                                     </div>
-                                    <h5>Comunidade</h5>
-                                    <p>Compromisso com as pessoas</p>
+                                    <h5>Trabalho</h5>
+                                    <p>Coragem e perseverança</p>
                                 </div>
                                 <div class="value-item">
                                     <div class="value-icon">
-                                        <i class="fas fa-hard-hat"></i>
+                                        <i class="fas fa-users"></i>
                                     </div>
-
-
-                                    <h5>Trabalho</h5>
-                                    <p>Coragem e perseverança.</p>
+                             
+                                     <h5>Comunidade</h5>
+                                    <p>Compromisso com as pessoas</p>
                                 </div>
                                 <div class="value-item">
                                     <div class="value-icon">
